# WARDEN

./: .gitignore  Cargo.toml  README.md
HH Blockchain node/: hardhat.config.js  package-lock.json  package.json
HH Blockchain node/contracts/: WardenEvidence.sol  WardenEvidenceFactory.sol
HH Blockchain node/scripts/: deploy.js  logAttack.js
HH Blockchain node/test/: WardenEvidence.test.js
config/: settings.yaml
src/: config.rs  main.rs  pipeline.rs  types.rs
src/blockchain/: client.rs  mod.rs  types.rs
src/engine/: mod.rs  sliding_window.rs
src/evidence/: hash.rs  mod.rs
src/logging/: jsonl.rs  mod.rs
src/mitigator/: iptables.rs  mod.rs
src/sniffer/: coap.rs  mod.rs  mqtt.rs
src/ui/: mod.rs  web.rs
src/ui/static/: app.js  styles.css
src/ui/templates/: index.html
src/verify/: hash.rs  mod.rs  verifier.rs
warden_attack_scripts/: coap_flood.py  dual_attack.sh  mqtt_flood.sh  mqtt_sustained_flood.sh
