[package]
name = "WARDEN"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap = "2"
etherparse = "0.15"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ethers = "2"
hex = "0.4"
